--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.90",
-    "@types/react": "^18.2.67",
-    "@types/react-dom": "^18.2.22",
     "@types/sockjs-client": "^1.5.4",
     "@types/stompjs": "^2.3.9",
     "emoji-picker-react": "^4.9.2",
@@ -57,8 +55,12 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/react-redux": "^7.1.33",
     "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0"
+    "@types/redux-thunk": "^2.1.0",
+    "@types/testing-library__jest-dom": "^5.14.9",
+    "@types/trusted-types": "^2.0.7"
   }
 }
